# Pokemon-Battle-Engine

./: .gitignore  CLAUDE.md  Makefile  OPERATIONAL_RUNBOOK.md  README.md  pyproject.toml
src/pokemon_battle_engine/: main.py
src/pokemon_battle_engine/api/: main.py  schemas.py
src/pokemon_battle_engine/domain/: battle.py  constants.py  damage.py  errors.py  field.py  field_conditions.py  items_effects.py  items_registry.py  models.py  move_effects.py  moves_registry.py  repository.py  status.py
src/pokemon_battle_engine/infra/: logging.py  pokeapi_client.py  pokemon_mapper.py
src/pokemon_battle_engine/services/: battle_service.py
tests/: conftest.py
tests/unit/: test_battle.py  test_calculators.py  test_move.py  test_repository.py  test_status_changes.py  test_status_effects.py
