[project]
name = "pokemon-battle-engine"
version = "0.1.0"
description = "A profesional Pokemon Battle Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
strict_equality = true

[tool.ruff]
line-length = 88
target-version = "py311"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]

# Para ignorar librerías externas que no tienen tipos
[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "src/pokemon_battle_engine/main.py"
]
